Fix spelling and spacing error

--- a/css/main.css
+++ b/css/main.css
@@ -9,8 +9,8 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-  font:normal 100%/1.3 nbuntu, sans-serif;
   box-sizing: border-box;
+  font: normal 100%/1.3 Ubuntu, sans-serif;
 }
 
 *, *::before, *::after {
@@ -24,12 +24,12 @@ body {
 header {
   margin: 0;
   background-color: #18294f;
-  color:#fff;
+  color: #fff;
   max-height: 320px;
 }
 
 header h1 {
-  margin 0 .9rem;
+  margin: 0 .9rem;
   padding: .3em 0 .5em;
   text-align: center;
 }
@@ -40,3 +40,32 @@ nav ul {
   margin: 0;
   font-size: 1.125rem;
 }
+
+nav a {
+  color: #6c8fe0;
+  text-decoration: none;
+  border: 5px solid transparent;
+  display: block;
+  white-space: nowrap;
+}
+
+nav li {
+  padding: .5em .75em;
+}
+
+nav a:hover {
+  background-color: #6c8fe0;
+  color: #fff;
+}
+
+nav li:hover {
+  background-color: #6c8fe0;
+}
+
+@media only screen and (min-width: 25em) {
+
+  nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+  }
